cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(public/src)
add_subdirectory(jagjeets/ps2/cannonball)
add_subdirectory(jagjeets/ps2/bounce)
add_subdirectory(jagjeets/ps3/orbit)
add_subdirectory(jagjeets/ps3/flythrough)
add_subdirectory(jagjeets/utility)
add_subdirectory(jagjeets/simplebitmap)
add_subdirectory(jagjeets/naca)
add_subdirectory(jagjeets/ps4/ps4_1)
add_subdirectory(jagjeets/ps4/ps4_2)
add_subdirectory(jagjeets/ps5/ps5_1)
add_subdirectory(jagjeets/ps5/ps5_2)
add_subdirectory(jagjeets/ps6/ps6_1)
add_subdirectory(jagjeets/ps6/ps6_2)
add_subdirectory(jagjeets/ps7)
add_subdirectory(jagjeets/ps8/ps8_1)
add_subdirectory(jagjeets/ps8/ps8_2)
add_subdirectory(iLearn)
add_subdirectory(jagjeets/ps9/ps9_1)
add_subdirectory(jagjeets/ps9/ps9_2)
